--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node index.html"
+    "start": "node app.js"
   },
   "keywords": [
     "url",
