--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongodb": "^2.2.31",
     "mongoose": "^4.12.2",
     "path": "^0.12.7",
-    "request": "^2.82.0"
+    "request": "^2.82.0",
+    "socket.io": "1.2.0"
   },
   "devDependencies": {},
   "scripts": {
